# cargo-rustc-wrapper

./: Cargo.toml  README.md
examples/: c2rust-instrument.rs
src/: lib.rs  util.rs
