[package]
name = "cargo-rustc-wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.1.13", features = ["derive"] }
toml_edit = "0.19.8"

[dev-dependencies]
fs-err = "2.9.0"
tempfile = "3.4.0"
